@@ -191,6 +191,7 @@ def build(bld):
         'model/ipv6-address-generator.cc',
         'model/ipv4-packet-probe.cc',
         'model/ipv6-packet-probe.cc',
+        'model/ipv6-pmtu-cache.cc',
         ]
 
     internet_test = bld.create_ns3_module_test_library('internet')
@@ -304,6 +305,7 @@ def build(bld):
         'model/rtt-estimator.h',
         'model/ipv4-packet-probe.h',
         'model/ipv6-packet-probe.h',
+        'model/ipv6-pmtu-cache.h',
        ]
 
     if bld.env['NSC_ENABLED']:
